--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -20,9 +20,8 @@
 .header a.nav {
   font-size: 25px;
   font-weight: bold;
-  font-style: italic;
   color:rgb(53, 50, 50);
-  background-color: rgb(86, 53, 230);
+  background-color:white;
   margin-top: 20px;
 }
 
