--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,10 +25,10 @@
 
 
 
-<div id="home">
+<div id="home" style="height: 450px;">
     <div class="landing-text">
-      <h1>Use your best experience</h1>
-      <h2>Get Extensive Cover on Low Premium<br/><br/></h2>
+      <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Use your best experience</h1>
+      <h2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: x-large; color: white;">Get Extensive Cover on Low Premium<br/><br/></h2>
       <button class="btn btn-primary btn-lg">
         <a class="abc"routerLink="/about">
         Know More About Us</a></button>
@@ -46,13 +46,13 @@
        </div>
        <div class="col-sm-6 text-center">
          <h2>Our policy Values</h2>
-         <p class="lead">Human values help students distinguish between values and skills, and understand the
+         <p class="lead" style="text-align: justify;">Human values help students distinguish between values and skills, and understand the
            need, basic guidelines, content and process of value education.
             It help students initiate a process of dialog within themselves to know what
            they ‘really want to be’ in their life and profession
             and also help students understand the meaning of happiness and prosperity for a
            human being. </p>
-         <p class="lead"> It facilitate the students to understand harmony at all the levels of human
+         <p class="lead" style="text-align: justify;"> It facilitate the students to understand harmony at all the levels of human
            living, and live accordingly
             and facilitate the students in applying the understanding of harmony in
            existence in their profession and lead an ethical life 
@@ -78,20 +78,20 @@
        </div>
        <div class="col-sm-6 text-center">
          <h2>OUR OUTCOME</h2>
-         <p class="lead"> Understand the significance of value inputs in a classroom, distinguish
+         <p class="lead" style="text-align: justify;"> Understand the significance of value inputs in a classroom, distinguish
            between values and skills, understand the need, basic guidelines, content and
            process of value education, explore the meaning of happiness and prosperity
-           and do a correct appraisal of the current scenario in the society<br/>
+           and do a correct appraisal of the current scenario in the society
             Distinguish between the Self and the Body, understand the meaning of
            Harmony in the Self the Co-existence of Self and Body.<br/>
             
            </p>
-         <p class="lead">
+         <p class="lead" style="text-align: justify;">
              Understand the value of harmonious relationship based on trust, respect and
              other naturally acceptable feelings in human-human relationships and
-             explore their role in ensuring a harmonious society <br/>
+             explore their role in ensuring a harmonious society 
              Understand the harmony in nature and existence, and work out their
-           mutually fulfilling participation in the nature.<br/>
+           mutually fulfilling participation in the nature.
             Distinguish between ethical and unethical practices, and start working out
            the strategy to actualize a harmonious environment wherever they work. 
            </p>    
@@ -108,11 +108,11 @@
       <div class="container">
           <div class="row">
               <div class="col-sm-6 col-md-3 item">
-                  <h3>Services</h3>
+                  <a  routerLink="/service" style="text-decoration: none; color: white; scroll-behavior: auto;">Services</a>
                   <ul>
-                      <li><a href="#">Life Insurance</a></li>
-                      <li><a href="#">Dental & Vision Insurance</a></li>
-                      <li><a href="#">Dental Insurance</a></li>
+                      <li>Life Insurance</li>
+                      <li>Dental & Vision Insurance</li>
+                      <li> Dental Insurance</li>
                   </ul>
               </div>
               <div class="col-sm-6 col-md-3 item">
