--- a/src/app/life/life.component.html
+++ b/src/app/life/life.component.html
@@ -27,7 +27,7 @@
             <div class="row g-3">
                 <div class="col">
                     <label>First Name</label>
-                    <input formControlName = "firstname" class="form-control" aria-label="First name" placeholder="Enter your first name" required required [(ngModel)] = "user.firstName"/>
+                    <input formControlName = "firstname" class="form-control" aria-label="First name" placeholder="Enter Your First Name" required required [(ngModel)] = "user.firstName"/>
                 <div *ngIf="firstname.invalid && (firstname.touched || firstname.dirty)">
                     <span class="error" *ngIf="firstname.errors?.required"> *First Name is required</span>
                     <span class="error" *ngIf="firstname.errors?.pattern"> *Enter Only Characters</span>
@@ -35,14 +35,14 @@
                 </div>
                 <div class="col">
                     <label>Middle Name</label>
-                    <input formControlName="middlename" class="form-control"  aria-label="Last name" placeholder="Enter middle last name" required required [(ngModel)] = "user.middleNmme"/>
+                    <input formControlName="middlename" class="form-control"  aria-label="Last name" placeholder="Enter Middle Name" required required [(ngModel)] = "user.middleNmme"/>
                     <div *ngIf="middlename.invalid && (middlename.touched || middlename.dirty)">
                         <span class="error" *ngIf="middlename.errors?.pattern"> *Enter Only Characters</span>
                     </div>
                 </div>
                 <div class="col">
                     <label>Last Name</label>
-                    <input formControlName="lastname" class="form-control"  aria-label="Last name" placeholder="Enter your last name" required required [(ngModel)] = "user.lastName"/>
+                    <input formControlName="lastname" class="form-control"  aria-label="Last name" placeholder="Enter Your Last Name" required required [(ngModel)] = "user.lastName"/>
                     <div *ngIf="lastname.invalid && (lastname.touched || lastname.dirty)">
                         <span class="error" *ngIf="lastname.errors?.required"> *Last Name is required</span>
                         <span class="error" *ngIf="lastname.errors?.pattern"> *Enter Only Characters</span>
@@ -121,8 +121,8 @@
                             
                     </div>
                     <div class="col">
-                        <label>Contact</label>
-                        <input formControlName="contact" class="form-control" aria-label="contact" placeholder="9100000000" required required [(ngModel)] = "user.contact"/>
+                        <label>Mobile No</label>
+                        <input formControlName="contact" class="form-control" aria-label="contact" placeholder="Ex: 7898086645" required required [(ngModel)] = "user.contact"/>
                         <div *ngIf="contact.invalid && (contact.touched || contact.dirty)">
                             <span class="error" *ngIf="contact.errors?.required"> *Mobile is required</span>
                             <span class="error" *ngIf="contact.errors?.pattern"> *Only Numbers are allowed</span>
