--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -27,19 +27,21 @@
 
 <div style="padding: 10px;">
 
-  <h1 style="background-color: #12172b; text-align: center; height: 100px; color: white; font-weight: bold;">About Us</h1>
-  <h2 style="text-align: center; background-color: #12172b; height: 175px; color: white;"><span>
-  We are The Insurance Company Of your Need<br>
+  <h1 style="background-color: #12172b; text-align: center; height: 165px; color: white; font-weight: bold;">About Us
   
-  
-  
-  
-  To be the most admired insurance <br>
-  company that enables the continued progress of customers<br>
-  by being responsive to their needs.
-  
-  </span>
-  </h2>
+    <span>
+     <h2> We are The Insurance Company Of your Need<br>
+      
+      
+      
+      
+      To be the most admired insurance <br>
+      company that enables the continued progress of customers<br>
+      by being responsive to their needs.
+      </h2>
+      </span>
+  </h1>
+   
   <p style="background-color: rgb(154, 214, 216); padding: 10px; font-weight: 500; text-align:justify; margin: 20px;">
   <span style="font-weight: 1000;">
   WHO WE ARE</span>
@@ -159,12 +161,12 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-3 item">
-                <h3>Services</h3>
-                <ul>
-                    <li><a href="#">Life Insurance</a></li>
-                    <li><a href="#">Dental & Vision Insurance</a></li>
-                    <li><a href="#">Dental Insurance</a></li>
-                </ul>
+              <a  routerLink="/service" style="text-decoration: none; color: white; scroll-behavior: auto;">Services</a>
+              <ul>
+                  <li>Life Insurance</li>
+                  <li>Dental & Vision Insurance</li>
+                  <li> Dental Insurance</li>
+              </ul>
             </div>
             <div class="col-sm-6 col-md-3 item">
                 <h3>Know Us</h3>
