--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -34,7 +34,7 @@
   <body>
   <section class="contact">
   <div class="content">
-  <h2>Contect Us</h2>
+  <h2>Contact Us</h2>
   <p> Need assistance with your plan? We'll get you the help you need.</p>
   </div>
   <div class="container">
@@ -77,7 +77,7 @@
   <span>Type your message....</span>
   </div>
   <div class="inputBox">
-  <input type="submit" name="" value="Send">
+  <input type="submit" name="" value="Send" style="background-color: rgba(28, 211, 28, 0.74);">
   </div>
   </form>
   </div>
@@ -87,35 +87,3 @@
   </html>
 
   
-<div class="footer-dark">
-  <footer>
-      <div class="container">
-          <div class="row">
-              <div class="col-sm-6 col-md-3 item">
-                  <h3>Services</h3>
-                  <ul>
-                      <li><a href="#">Life Insurance</a></li>
-                      <li><a href="#">Dental & Vision Insurance</a></li>
-                      <li><a href="#">Dental Insurance</a></li>
-                  </ul>
-              </div>
-              <div class="col-sm-6 col-md-3 item">
-                  <h3>Know Us</h3>
-                  <ul>
-                      <li><a class="nav"routerLink="/about">About Us</a></li>
-                      <li><a class="nav"routerLink="/signup">Create Account</a></li>
-                      <li><a class="nav"routerLink="/contact">Contact Us</a></li>
-                  </ul>
-              </div>
-              <div class="col-md-6 item text">
-                  <h3>Impetus Insurance</h3>
-                  <p>
-                      Understand the value of harmonious relationship based on trust, respect and other naturally acceptable feelings in human-human relationships and explore their role in ensuring a harmonious society
-                      Understand the harmony in nature and existence, and work out their mutually fulfilling participation in the nature.
-                  </p>
-              </div>
-          </div>
-          <p class="copyright">All Copyright Reserved by Impetus © 2021</p>
-      </div>
-  </footer>
-</div>
