--- a/src/app/createadmin/createadmin.component.html
+++ b/src/app/createadmin/createadmin.component.html
@@ -21,7 +21,7 @@
       </div>
     
       <div class="container" style="background-color:#f1f1f1">
-        <button type="button" class="cancelbtn" routerLink="/adhome">Cancel</button>
+        <button type="button" class="cancelbtn" routerLink="/adhome">Back</button>
       </div>
     </form>
     
