--- a/src/app/dental-vision/dental-vision.component.html
+++ b/src/app/dental-vision/dental-vision.component.html
@@ -30,7 +30,7 @@
             <div class="row g-3">
                 <div class="col">
                     <label>First Name</label>
-                    <input formControlName = "firstname" class="form-control" aria-label="First name" placeholder="Enter your first name" required required [(ngModel)] = "user.firstName"/>
+                    <input formControlName = "firstname" class="form-control" aria-label="First name" placeholder="Enter Your First Name" required required [(ngModel)] = "user.firstName"/>
                 <div *ngIf="firstname.invalid && (firstname.touched || firstname.dirty)">
                     <span class="error" *ngIf="firstname.errors?.required"> *First Name is required</span>
                     <span class="error" *ngIf="firstname.errors?.pattern"> *Enter Only Characters</span>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col">
                     <label>Middle Name</label>
-                    <input formControlName="middlename" class="form-control"  aria-label="Last name" placeholder="Enter middle last name" required required [(ngModel)] = "user.middleNmme">
+                    <input formControlName="middlename" class="form-control"  aria-label="Last name" placeholder="Enter Middle Name" required required [(ngModel)] = "user.middleNmme">
                     <div *ngIf="middlename.invalid && (middlename.touched || middlename.dirty)">
                         <span class="error" *ngIf="middlename.errors?.pattern"> *Enter Only Characters</span>
                     </div>
@@ -123,7 +123,7 @@
                     </div>
                     <div class="col">
                         <label>Contact</label>
-                        <input formControlName="contact" class="form-control" aria-label="contact" placeholder="9100000000" required required [(ngModel)] = "user.contact"/>
+                        <input formControlName="contact" class="form-control" aria-label="Mobile No" placeholder="EX: 7658980045" required required [(ngModel)] = "user.contact"/>
                         <div *ngIf="contact.invalid && (contact.touched || contact.dirty)">
                             <span class="error" *ngIf="contact.errors?.required"> *Mobile is required</span>
                             <span class="error" *ngIf="contact.errors?.pattern"> *Only Numbers are allowed</span>
