--- a/src/app/fetchdatadental/fetchdatadental.component.html
+++ b/src/app/fetchdatadental/fetchdatadental.component.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
+     
    <div class="container" style="margin-top: 40px;">
+    <a routerLink="/adhome" style="text-decoration: none; font-size: x-large;"><--Back</a>
     <table id="dtHorizontalExample" class="table table-striped table-bordered table-sm" cellspacing="0">
         <thead style="background-color: black; color:white; text-align:left; width: 100px;">
             <th>ID</th>
@@ -20,10 +22,10 @@
         </thead>
         <tbody>
         <tr *ngFor="let user of userData">
-            <td>{{user.aadhar}}</td>
+             <td>{{user.aadhar}}</td>
             <td>{{user.firstName}}</td>
             <td>{{user.email}}</td>
-            <td><button type="button" class="btn btn-success">Approve</button></td>
+            <td><button type="button" class="btn btn-success" (click)="dentalApprove(user.aadhar)">Approve</button></td>
             <td><button type="button" class="btn btn-danger">Rejects</button></td>
             <td><button type="button" class="btn btn-info">Details</button></td>
         </tr>
