--- a/src/app/fetchdatadentalvision/fetchdatadentalvision.component.html
+++ b/src/app/fetchdatadentalvision/fetchdatadentalvision.component.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
+
    <div class="container" style="margin-top: 40px;">
+    <a routerLink="/adhome" style="text-decoration: none; font-size: x-large;"><--Back</a>
     <table id="dtHorizontalExample" class="table table-striped table-bordered table-sm" cellspacing="0">
         <thead style="background-color: black; color:white; text-align:left; width: 100px;">
             <th>ID</th>
