--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -27,7 +27,7 @@
 
 
 
-<section class="vh-100" style="background-color: #eee;">
+<section class="vh-100" style="background-color:white; margin-top: 50px; ">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-12 col-xl-11">
@@ -52,15 +52,15 @@
 
                 <form #Registerform="ngForm" (ngSubmit)="registerUser()" [formGroup]="SignupForm" class="mx-1 mx-md-4">
 
-                  <small class="text-danger">{{msg}}</small>
+               
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example1c">First Name</label>
-                      <input formControlName = "firstname" class="form-control" aria-label="First name" placeholder="Enter your first name" required required [(ngModel)] = "user.firstName"/>
+                      <input formControlName = "firstname" class="form-control" aria-label="First Name" placeholder="Enter Your First Name" required required [(ngModel)] = "user.firstName"/>
                       <div *ngIf="firstname.invalid && (firstname.touched || firstname.dirty)">
-                          <span class="error" *ngIf="firstname.errors?.required"> *First Name is required</span>
+                          <span class="error" *ngIf="firstname.errors?.required"> *First Name is Required</span>
                           <span class="error" *ngIf="firstname.errors?.pattern"> *Enter Only Characters</span>
                       </div>
                     </div>
@@ -70,9 +70,9 @@
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example1c">Last Name</label>
-                      <input formControlName="lastname" class="form-control"  aria-label="Last name" placeholder="Enter your last name" required required [(ngModel)] = "user.lastName"/>
+                      <input formControlName="lastname" class="form-control"  aria-label="Last name" placeholder="Enter Your Last Name" required required [(ngModel)] = "user.lastName"/>
                       <div *ngIf="lastname.invalid && (lastname.touched || lastname.dirty)">
-                          <span class="error" *ngIf="lastname.errors?.required"> *Last Name is required</span>
+                          <span class="error" *ngIf="lastname.errors?.required"> *Last Name is Required</span>
                           <span class="error" *ngIf="lastname.errors?.pattern"> *Enter Only Characters</span>
                       </div> 
                     </div>
@@ -83,7 +83,7 @@
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example3c">Your Email</label>
-                      <input formControlName="email" class="form-control"  aria-label="email" placeholder="Enter your email" required required [(ngModel)] = "user.emailId" />
+                      <input formControlName="email" class="form-control"  aria-label="email" placeholder="Enter Your Email" required required [(ngModel)] = "user.emailId" />
                     <div *ngIf="email.invalid && (email.touched || email.dirty)">
                         <span class="error" *ngIf="email.errors?.required">*Email required</span>
                     <span class="error" *ngIf="email.errors?.pattern">*Invalid Email Id</span>
@@ -95,7 +95,7 @@
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example4c">Password</label>
-                      <input formControlName="password" class="form-control" aria-label="adhar" type="password" placeholder="Enter your password" required required [(ngModel)] = "user.password"/>
+                      <input formControlName="password" class="form-control" aria-label="adhar" type="password" placeholder="Enter Your Password" required required [(ngModel)] = "user.password"/>
                     <div *ngIf="password.invalid && (password.touched || password.dirty)">
                         <span class="error" *ngIf="password.errors?.required"> *password is required</span>
                         <span class="error" *ngIf="password.errors?.pattern">  *Only numbers Characters @#! are allowed</span>
@@ -109,8 +109,8 @@
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <label class="form-label" for="form3Example4cd"> Confirm password</label>
-                      <input formControlName="cpassword" class="form-control" aria-label="adhar" type="password" placeholder="Confirm password" required  />
+                      <label class="form-label" for="form3Example4cd"> Confirm Password</label>
+                      <input formControlName="cpassword" class="form-control" aria-label="adhar" type="password" placeholder="Confirm Password" required  />
                       <div *ngIf="cpassword.invalid && (cpassword.touched || cpassword.dirty)">
                           <span class="error" *ngIf="cpassword.errors?.required"> *password is required</span>
                           <span class="error" *ngIf="cpassword.errors?.MustMatch">  *Password didn't matched</span>
@@ -125,9 +125,12 @@
                       type="checkbox"
                       value=""
                       id="form2Example3c"
+                      required="required"
+                      
+                      
                     />
                     <label class="form-check-label" for="form2Example3">
-                      I agree all statements in <a href="#!">Terms of service</a>
+                      I agree all statements in <a href="https://www.vela.insure/fileadmin/user_upload/Downloads/ADAKVI9_04.18_enGB.pdf" target="_blank">Terms of service</a>
                     </label>
                   </div>
 
@@ -156,35 +159,3 @@
 
 
 
-<div class="footer-dark">
-  <footer>
-      <div class="container">
-          <div class="row">
-              <div class="col-sm-6 col-md-3 item">
-                  <h3>Services</h3>
-                  <ul>
-                      <li><a href="#">Life Insurance</a></li>
-                      <li><a href="#">Dental & Vision Insurance</a></li>
-                      <li><a href="#">Dental Insurance</a></li>
-                  </ul>
-              </div>
-              <div class="col-sm-6 col-md-3 item">
-                  <h3>Know Us</h3>
-                  <ul>
-                      <li><a class="nav"routerLink="/about">About Us</a></li>
-                      <li><a class="nav"routerLink="/signup">Create Account</a></li>
-                      <li><a class="nav"routerLink="/contact">Contact Us</a></li>
-                  </ul>
-              </div>
-              <div class="col-md-6 item text">
-                  <h3>Impetus Insurance</h3>
-                  <p>
-                      Understand the value of harmonious relationship based on trust, respect and other naturally acceptable feelings in human-human relationships and explore their role in ensuring a harmonious society
-                      Understand the harmony in nature and existence, and work out their mutually fulfilling participation in the nature.
-                  </p>
-              </div>
-          </div>
-          <p class="copyright">All Copyright Reserved by Impetus © 2021</p>
-      </div>
-  </footer>
-</div>
