--- a/src/app/fetchdatadental/fetchdatadental.component.html
+++ b/src/app/fetchdatadental/fetchdatadental.component.html
@@ -25,7 +25,7 @@
              <td>{{user.aadhar}}</td>
             <td>{{user.firstName}}</td>
             <td>{{user.email}}</td>
-            <td><button type="button" class="btn btn-success" (click)="dentalApprove(user.aadhar)">Approve</button></td>
+            <td><button type="button" class="btn btn-success" (click)="dentalApprove(user)">Approve</button></td>
             <td><button type="button" class="btn btn-danger">Rejects</button></td>
             <td><button type="button" class="btn btn-info">Details</button></td>
         </tr>
