--- a/src/app/fetchdatalife/fetchdatalife.component.html
+++ b/src/app/fetchdatalife/fetchdatalife.component.html
@@ -26,7 +26,7 @@
             <td>{{user.email}}</td>
             <td><button type="button" class="btn btn-success">Approve</button></td>
             <td><button type="button" class="btn btn-danger">Rejects</button></td>
-            <td><button type="button" class="btn btn-info">Details</button></td>
+            <td><button type="button" class="btn btn-info"><a routerLink="/lifeServiceDetails" style="color: white; text-decoration: none;">Details</a></button></td>
         </tr>
        </tbody> 
     </table>
