--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -50,7 +50,7 @@
 
 
 
-                <form #Registerform="ngForm" (ngSubmit)="registerUser()" [formGroup]="SignupForm" class="mx-1 mx-md-4">
+                <form #Registerform="ngForm" (ngSubmit)="Registerform.form.valid && registerUser()" [formGroup]="SignupForm" class="mx-1 mx-md-4">
 
                
 
@@ -95,7 +95,7 @@
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example4c">Password</label>
-                      <input formControlName="password" class="form-control" aria-label="adhar" type="password" placeholder="Enter Your Password" required required [(ngModel)] = "user.password"/>
+                      <input formControlName="password" class="form-control" aria-label="adhar" type="password" placeholder="Enter Your Password"  required required [(ngModel)] = "user.password"/>
                     <div *ngIf="password.invalid && (password.touched || password.dirty)">
                         <span class="error" *ngIf="password.errors?.required"> *password is required</span>
                         <span class="error" *ngIf="password.errors?.pattern">  *Only numbers Characters @#! are allowed</span>
@@ -110,29 +110,16 @@
                     <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example4cd"> Confirm Password</label>
-                      <input formControlName="cpassword" class="form-control" aria-label="adhar" type="password" placeholder="Confirm Password" required  />
+                      <input formControlName="cpassword" class="form-control" aria-label="adhar" type="password" placeholder="Confirm Password" pattern="{{user.password}}" required  />
                       <div *ngIf="cpassword.invalid && (cpassword.touched || cpassword.dirty)">
                           <span class="error" *ngIf="cpassword.errors?.required"> *password is required</span>
-                          <span class="error" *ngIf="cpassword.errors?.MustMatch">  *Password didn't matched</span>
+                          <span class="text-danger" *ngIf="Registerform.submitted && cpassword.errors?.pattern">  *Password didn't matched</span>
                           
                       </div>
                     </div>
                   </div>
 
-                  <div class="form-check d-flex justify-content-center mb-5">
-                    <input
-                      class="form-check-input me-2"
-                      type="checkbox"
-                      value=""
-                      id="form2Example3c"
-                      required="required"
-                      
-                      
-                    />
-                    <label class="form-check-label" for="form2Example3">
-                      I agree all statements in <a href="https://www.vela.insure/fileadmin/user_upload/Downloads/ADAKVI9_04.18_enGB.pdf" target="_blank">Terms of service</a>
-                    </label>
-                  </div>
+                  
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                     <button type="submit" class="btn btn-primary btn-lg">Register</button>
