--- a/src/app/dental/dental.component.html
+++ b/src/app/dental/dental.component.html
@@ -21,13 +21,12 @@
     <div class="container">
         <div id="heading" class="container-fluid" style="background-image: url('https://media.istockphoto.com/videos/cute-tooth-dental-cartoon-hd-animation-video-id975678004?s=640x640');">
              <h1 style="color: black;">Apply for Dental Insurance</h1>
-             <p style="color: black; font-weight: bold;">Search our extensive network of nationwide dentists to find one that's right for you.<br>
-                Members: Not sure of your plan? Log in to find a dentist in your network.</p>
+             
         </div>
         <form [formGroup]="Dental" #dentalForm ="ngForm" (ngSubmit)="applyDental()">
             <div class="row g-3">
                 <div class="col">
-                    <label>First Name</label>
+                    <label>First Name<span style="color: red;">*</span></label>
                     <input formControlName = "firstname" class="form-control" aria-label="First name" placeholder="Enter your first name" required [(ngModel)] = "user.firstName"/>
                 <div *ngIf="firstname.invalid && (firstname.touched || firstname.dirty)">
                     <span class="error" *ngIf="firstname.errors?.required"> First Name is required</span>
@@ -35,14 +34,14 @@
                 </div>
                 </div>
                 <div class="col">
-                    <label>Middle Name</label>
+                    <label>Middle Name<span style="color: red;">*</span></label>
                     <input formControlName="middlename" class="form-control"  aria-label="Last name" placeholder="Enter middle name" required [(ngModel)] = "user.middleNmme">
                     <div *ngIf="middlename.invalid && (middlename.touched || middlename.dirty)">
                         <span class="error" *ngIf="middlename.errors?.pattern"> *Enter Only Characters</span>
                     </div>
                 </div>
                 <div class="col">
-                    <label>Last Name</label>
+                    <label>Last Name<span style="color: red;">*</span></label>
                     <input formControlName="lastname" class="form-control"  aria-label="Last name" placeholder="Enter your last name" required required [(ngModel)] = "user.lastName">
                     <div *ngIf="lastname.invalid && (lastname.touched || lastname.dirty)">
                         <span class="error" *ngIf="lastname.errors?.required"> *Last Name is required</span>
@@ -52,7 +51,7 @@
             </div> 
             <div class="row g-3">
                 <div class="col">
-                    <label>Aadhar Number</label>
+                    <label>Aadhar Number<span style="color: red;">*</span></label>
                     <input formControlName="aadhar" class="form-control" aria-label="adhar" placeholder="Enter 12 digit Aadhar number" required required [(ngModel)] = "user.aadhar"/>
                     <div *ngIf="aadhar.invalid && (aadhar.touched || aadhar.dirty)">
                         <span class="error" *ngIf="aadhar.errors?.required"> *Aadhar is required</span>
@@ -63,14 +62,14 @@
                     </div>
                 </div>
                 <div class="col">
-                    <label>Email</label>
+                    <label>Email<span style="color: red;">*</span></label>
                     <input formControlName="email" class="form-control"  aria-label="email" placeholder="Enter your email" required required [(ngModel)] = "user.email">
                     <div *ngIf="email.invalid && (email.touched || email.dirty)">
                     <span class="error" *ngIf="email.errors?.pattern">*Invalid Email Id</span>
                     </div> 
                 </div>
                 <div class="col">
-                    <label>PAN Number</label>
+                    <label>PAN Number<span style="color: red;">*</span></label>
                     <input formControlName="pannumber" class="form-control"  aria-label="pan" placeholder="Enter your PAN number" required required [(ngModel)] = "user.pan">
                     <div *ngIf="pannumber.invalid && (pannumber.touched || pannumber.dirty)">
                         <span class="error" *ngIf="pannumber.errors?.required"> *Pan is required</span>
@@ -81,14 +80,14 @@
             <div>
                 <div class="row g-3">
                     <div class="col">
-                        <label>Address</label>
+                        <label>Address <span style="color: red;">*</span></label>
                         <input formControlName="address" class="form-control" aria-label="address" placeholder="Enter full address" required required [(ngModel)] = "user.address"/>
                         <div *ngIf="address.invalid && (address.touched || address.dirty)">
                             <span class="error" *ngIf="address.errors?.required"> *Address is required</span>
                         </div>
                     </div>
                     <div class="col">
-                        <label>Zip code</label>
+                        <label>Zip code<span style="color: red;">*</span></label>
                         <input formControlName="zipcode" class="form-control" aria-label="zip" placeholder="Enter zip code" required required [(ngModel)] = "user.zip"/>
                         <div *ngIf="zipcode.invalid && (zipcode.touched || zipcode.dirty)">
                         <span class="error" *ngIf="zipcode.errors?.required"> *Zip Code is required</span>
@@ -98,7 +97,7 @@
                     </div>
                     </div>
                     <div class="col">
-                        <label>City</label>
+                        <label>City<span style="color: red;">*</span></label>
                         <input formControlName="city" class="form-control" aria-label="city" placeholder="Enter city" required required [(ngModel)] = "user.city"/>
                         <div *ngIf="city.invalid && (city.touched || city.dirty)">
                         <span class="error" *ngIf="city.errors?.required"> *city is required</span>
@@ -111,7 +110,7 @@
             <div>
                 <div class="row g-3">
                     <div class="col">
-                        <label>State</label>
+                        <label>State<span style="color: red;">*</span></label>
                         <input formControlName="state" class="form-control" aria-label="city" placeholder="Enter your state" required required [(ngModel)] = "user.state"/>
                         <div *ngIf="state.invalid && (state.touched || state.dirty)">
                         <span class="error" *ngIf="state.errors?.required"> *state is required</span>
@@ -120,7 +119,7 @@
                       
                     </div>
                     <div class="col">
-                        <label>Mobile No</label>
+                        <label>Mobile No<span style="color: red;">*</span></label>
                         <input formControlName="contact" class="form-control" aria-label="contact" placeholder="Ex: 7659085543" required required [(ngModel)] = "user. contact"/>
                         <div *ngIf="contact.invalid && (contact.touched || contact.dirty)">
                             <span class="error" *ngIf="contact.errors?.required"> *Mobile is required</span>
@@ -130,7 +129,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <label>Birth date</label>
+                        <label>Birth date<span style="color: red;">*</span></label>
                         <input formControlName="dateOfBirth" class="form-control" aria-label="contact" placeholder="DD/MM/YYYY" required required [(ngModel)] = "user. dateOfBirth"/>
                         <div *ngIf="dateOfBirth.invalid && (dateOfBirth.touched || dateOfBirth.dirty)">
                             <span class="error" *ngIf="dateOfBirth.errors?.required"> *Date is required</span>
@@ -143,7 +142,7 @@
             <div>
                 <div class="row g-3">
                     <div class="col">
-                        <label>Occupation</label>
+                        <label>Occupation<span style="color: red;">*</span></label>
                         <input formControlName="occupation" class="form-control" aria-label="zip" placeholder="Enter your Occupation" required required [(ngModel)] = "user.occupation"/>
                         <div *ngIf="occupation.invalid && (occupation.touched || occupation.dirty)">
                             <span class="error" *ngIf="occupation.errors?.required"> *Occupation is required</span>
@@ -151,7 +150,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <label>Annual Income in Lacs</label>
+                        <label>Annual Income in Lacs<span style="color: red;">*</span></label>
                     <input formControlName="income" class="form-control"  placeholder="In Lacs" required required [(ngModel)] = "user.income"/>
                     <div *ngIf="income.invalid && (income.touched || income.dirty)">
                         <span class="error" *ngIf="income.errors?.required"> *Income is required</span>
@@ -164,29 +163,95 @@
             </div>
             <div class="row g-3">
                 <div class="col">
-                    <label>Describe time in year for your plan ?</label>
-                    <input formControlName="selectPlane" class="form-control"  placeholder="1-5 year" required required [(ngModel)] = "user.selectPlane"/>
-                    <div *ngIf="selectPlane.invalid && (selectPlane.touched || selectPlane.dirty)">
-                        <span class="error" *ngIf="selectPlane.errors?.required"> *Plan is required</span>
-                        <span class="error" *ngIf="selectPlane.errors?.pattern"> *Only Numbers are allowed</span>
-                        <span class="error" *ngIf="selectPlane.errors?.minlength">*Invalid Plan</span>
-                        <span class="error" *ngIf="selectPlane.errors?.maxlength">*Invalid Plane</span>
-                    </div>
+                    <label for ="selectPlane">Describe time in year for your plan ?<span style="color: red;">*</span></label>
+                    <br> 
+                    <select style="height: 50px; width: 500px;"> 
+                        <option>Choose your year plan</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option> 
+                    </select>  
                 </div>
                 <div class="col">
-                    <label>Gender</label>
-                    
-                    <input formControlName="gender" class="form-control" aria-label="Smoking" placeholder="Male/Female"  required [(ngModel)] = "user.gender"/>
-                 <div *ngIf="gender.invalid && (gender.touched || gender.dirty)">
-                  <span class="error" *ngIf="gender.errors?.required"> *Type only Male/Female</span>
-                  <span class="error" *ngIf="gender.errors?.pattern"> *Only Male/Female allowed</span>
-                        
-                 </div>
+                    <label>Select member<span style="color: red;">*</span></label>
+                    <br>
+                      <select name="cars" id="cars" style="height: 45px; width: 490px;" (change)="selectChangeHandler($event)">
+                        <option>Please select member</option>
+                        <option value="Individual">Individual</option>
+                        <option value="Individual & Spouse">Individual & Spouse</option>
+                        <option value="Individual Spouse & Child">Individual Spouse & Child</option>
+                        <option value="Individual Spouse & Parents">Individual Spouse & Parents</option>
+                      </select>
+                       
                 </div>
             </div>
+
+             
+
+
+            <div class="row g-3">
+                <div class="col ">
+                    <label>Gender<span style="color: red;">*</span></label>
+                     
+                      <select name="cars" id="cars" style="height: 45px; width: 490px;">
+                        <option value="Male" [(ngModel)] = "user.gender">Male</option>
+                        <option value="Female" [(ngModel)] = "user.gender">Female</option>
+                         
+                      </select>
+                 </div>
+
+            
+                <div class="col">
+                    <label>Are you planning on cancelling any existing life insurance?</label>
+                       <select name="cars" id="cars" style="height: 45px; width: 490px;">
+                        <option value="Yes">Yes</option>
+                        <option value="No">No</option>
+                      </select>
+                </div>
+
+            </div>
+           
+
+
+
+
+            <div class="row g-3">
+                <div class="col ">
+                    <p>Do you have group life insurance through work?</p>
+                      <select name="cars" id="cars" style="height: 45px; width: 490px;">
+                        <option value="Yes">Yes</option>
+                        <option value="No">No</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <p>Do you consume Tobacco Or Alcohol Or do Smoking?<span style="color: red;">*</span></p>
+                 
+                    <select name="cars" id="cars" style="height: 45px; width: 490px;">
+                        <option value="Yes">Yes</option>
+                        <option value="No">No</option>
+                      </select>
+                </div>
+
+            </div>
+
+
+
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
+            
             <div>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Do you have any other health Issue please Describe:</label>
+                    <label for="exampleFormControlTextarea1" class="form-label">Do you have any other health Issue please Describe:<span style="color: red;">*</span></label>
                     <input formControlName="healthIssue" class="form-control" aria-label="zip" placeholder="Tell about your health issue" required required [(ngModel)] = "user.healthIssue" maxlength="50" style="height: 100px;"/>
                     <div *ngIf="healthIssue.invalid && (healthIssue.touched || healthIssue.dirty)">
                         <span class="error" *ngIf="healthIssue.errors?.required"> *Occupation is required</span>
@@ -194,43 +259,6 @@
                     </div>     
                 </div>
             </div>
-            <div class="row g-3">
-            <div class="col">
-                <p>Are you planning on cancelling any existing life insurance?</p>
-                   <input formControlName="cancellingInsurance" class="form-control" aria-label="Smoking" placeholder="YES/NO"  required [(ngModel)] = "user.cancellingInsurance"/>
-                   <div *ngIf="cancellingInsurance.invalid && (cancellingInsurance.touched || cancellingInsurance.dirty)">
-                    <span class="error" *ngIf="cancellingInsurance.errors?.required"> *Type only Yes/No</span>
-                    <span class="error" *ngIf="cancellingInsurance.errors?.pattern"> *Only Yes/No allowed</span>
-                          
-                   </div>
-            </div>
-            </div>
-            <div class="row g-3">
-                <div class="col">
-                <p>Do you have group life insurance through work?</p>
-                  <input formControlName="groupInsurance" class="form-control" aria-label="Smoking" placeholder="YES/NO"  required [(ngModel)] = "user.groupInsurance"/>
-                   <div *ngIf="groupInsurance.invalid && (groupInsurance.touched || groupInsurance.dirty)">
-                    <span class="error" *ngIf="groupInsurance.errors?.required"> *Type only Yes/No</span>
-                    <span class="error" *ngIf="groupInsurance.errors?.pattern"> *Only Yes/No allowed</span>
-                          
-                   </div>
-                </div>
-            </div>
-            <div class="row g-3">
-                <div class="col">
-                <p>Do you consume Tobacco Or Alcohol Or do Smoking? </p>
-                 
-                <input formControlName="Tobacco" class="form-control" aria-label="Smoking" placeholder="YES/NO"  required [(ngModel)] = "user.tobacco"/>
-                 <div *ngIf="Tobacco.invalid && (Tobacco.touched || Tobacco.dirty)">
-                  <span class="error" *ngIf="Tobacco.errors?.required"> *Type only Yes/No</span>
-                  <span class="error" *ngIf="Tobacco.errors?.pattern"> *Only Yes/No allowed</span>
-                        
-                 </div>
-                 
-                </div>
-            </div>
-            
-            
             <div class="row g-3">
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Please add any additional comments or questions:</label>
@@ -241,48 +269,22 @@
                     </div>     
                 </div>
             </div>
-            
-            <button type="submit" class="btn btn-success">Submit</button>
-        
-              
+            <div class="row g-3">
+                <div class="col">  
+                <button type="submit" class="btn btn-success"  (click)="user.gender = 'male'"
+                (click)="user.groupInsurance='No'"
+                (click)="user.cancellingInsurance='No'"
+                (click)="user.tobacco='Yes'"
+                (click)="user.selectPlane='1'">Submit</button>
+                </div> 
+                 
+            </div>  
         </form>
 
-
+        
     </div>
-</div>
+</div>   
 
 
 
-<div class="footer-dark">
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-3 item">
-                    <h3>Services</h3>
-                    <ul>
-                        <li><a href="#">Life Insurance</a></li>
-                        <li><a href="#">Dental & Vision Insurance</a></li>
-                        <li><a href="#">Dental Insurance</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-6 col-md-3 item">
-                    <h3>Know Us</h3>
-                    <ul>
-                        <li><a class="nav"routerLink="/about">About Us</a></li>
-                        <li><a class="nav"routerLink="/signup">Create Account</a></li>
-                        <li><a class="nav"routerLink="/contact">Contact Us</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-6 item text">
-                    <h3>Impetus Insurance</h3>
-                    <p>
-                        Understand the value of harmonious relationship based on trust, respect and other naturally acceptable feelings in human-human relationships and explore their role in ensuring a harmonious society
-                        Understand the harmony in nature and existence, and work out their mutually fulfilling participation in the nature.
-                    </p>
-                </div>
-            </div>
-            <p class="copyright">All Copyright Reserved by Impetus © 2021</p>
-        </div>
-    </footer>
-  </div>
-  
+
